# vector_gauss

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: gaussian.hpp
src/: gaussian.cpp  main.cpp
tests/: tests.cpp
